exports[`editor > should allow to enter text #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "to provide a robust synopsis for high level overviews.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`editor > should allow to apply inline styles #0`] =
{
  "blocks": [
    {
      "data": {
        "dynamicStyles": {
          "line-height": "2.5",
          "padding-bottom": "3px",
          "padding-top": "2px"
        },
        "textAlignment": "center"
      },
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 0,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "BOLD"
        },
        {
          "length": 5,
          "offset": 10,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 20,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "ITALIC"
        },
        {
          "length": 30,
          "offset": 20,
          "style": "color4"
        }
      ],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "blockquote"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "blockquote"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`editor > should allow to create lists #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};
